agrega creacion de funciones con y sin parametros

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -95,9 +95,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd7205aa-ab3c-4f7e-b34c-65b4921f6c2b"
+        "outputId": "8bb88d86-3dbc-4f92-a454-534c208c1b0a"
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,11 +127,11 @@
         "id": "Xt3FixjluwKA",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
-        "outputId": "84c6628c-2f84-4768-9709-5d3615031cc4"
+        "outputId": "a872cdb7-78c6-4b86-c3f5-62fe29887f2a"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +144,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -175,16 +175,16 @@
         " # ************************************* SE INSTALA LA 3.8.1 PARA REGULARIZAR *************************\n",
         " # ****************************************************************************************************\n",
         "\n",
-        " #!pip install matplotlib==3.8.1  -- se debe dejar comentada la opcion ya que no vamos a utilizarla..."
+        "!pip install matplotlib==3.8.1  #-- se debe dejar comentada la opcion ya que no vamos a utilizarla..."
       ],
       "metadata": {
         "id": "WZZH7hpeuzlh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2780fae4-777a-485d-9115-4109d35f9223"
+        "outputId": "f97127fe-be48-4cdf-ba86-792c93378a28"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "zKVkpnrkuzzN"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "b9N_XqUUyCOq"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "hXFwrecUu1kI"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -271,7 +271,7 @@
       "metadata": {
         "id": "f-ct3szSu1m9"
       },
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -286,9 +286,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 430
         },
-        "outputId": "b24b6a88-a322-45e6-e63f-a731cc4d45f2"
+        "outputId": "725f65b4-c566-4155-c082-322074017c70"
       },
-      "execution_count": 33,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "DqL41eweMDIn"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -333,7 +333,7 @@
       "metadata": {
         "id": "0mLdAvJbMDvQ"
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -357,7 +357,7 @@
       "metadata": {
         "id": "ipPyz0UGMFvX"
       },
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -369,25 +369,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
         "id": "f3MWkAbQMF5F",
-        "outputId": "e2ea1176-1418-461f-c979-9621e3142e6e"
+        "outputId": "1d5d2d85-c155-4cc5-ead2-c9b00775bbc2"
       },
-      "execution_count": 31,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'Juan'"
+              "'José'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 15
         }
       ]
     },
@@ -401,9 +401,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vIfe8RteRZDO",
-        "outputId": "167403c9-efb3-456a-87e2-927d4061a755"
+        "outputId": "cc375dc2-3a0d-48ab-e756-9133cc882c0d"
       },
-      "execution_count": 32,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +443,7 @@
       "metadata": {
         "id": "wvepW9hYPvUQ"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -463,7 +463,7 @@
         "id": "Ho4hKmTGPvRk",
         "outputId": "1e6b958d-3b35-48b4-e2f1-846fb6cd7fda"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +489,7 @@
         "id": "2KupAeEtPvPA",
         "outputId": "50e3ae89-9936-4caa-a14a-28c933aa9f4b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
         "id": "8etMwLXLPvMi",
         "outputId": "df0e4801-3d0d-4867-f827-18d2500f0f8f"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +547,7 @@
         "id": "uBN97BEFPvJU",
         "outputId": "09ab4385-c7e6-4d05-ea70-65efc8da8808"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +577,7 @@
         "id": "2OktGgPKRSj1",
         "outputId": "1082ab3e-9d58-4ee1-eea0-de896d1278a7"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +607,7 @@
         "id": "rrLsj3DuRSgq",
         "outputId": "5ae61e87-1e92-4422-bf22-5c1d39873fc9"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,7 +644,7 @@
         "id": "o6Ld1dSuRSdC",
         "outputId": "71747195-8068-49db-8de0-119abfad1dba"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +692,7 @@
         "id": "0J_TUAPRRSZw",
         "outputId": "d24fc96b-268d-439e-bd90-8eef262dc773"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,24 +705,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fNn1sK3gPvGS"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "7n0Cn_laPvDo"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -772,30 +754,64 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas = {'Trimestre 1': 9.5, 'Trimestre 2': 8, 'Trimestre 3': 7}"
+      ],
       "metadata": {
         "id": "WQ-pCgdaMOlc"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "suma = float(0)\n",
+        "for s in notas.values():\n",
+        "  suma += s\n",
+        "print(suma)"
+      ],
       "metadata": {
-        "id": "GU-HvC-QMOoS"
+        "id": "GU-HvC-QMOoS",
+        "outputId": "abb4cd7e-5af5-4a1d-e22b-84a8f59d2731",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = sum(notas.values()) / len(notas.values())\n",
+        "print(promedio)"
+      ],
       "metadata": {
-        "id": "qKEyjY2bMOqj"
+        "id": "qKEyjY2bMOqj",
+        "outputId": "e9102add-712b-4db1-abbd-db68d459a73e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.166666666666666\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -810,26 +826,92 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "help(round)"
+      ],
       "metadata": {
-        "id": "c7Cn5XFfMP5E"
+        "id": "c7Cn5XFfMP5E",
+        "outputId": "367cfece-f3d6-4a67-bae3-8c52dd8d54c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function round in module builtins:\n",
+            "\n",
+            "round(number, ndigits=None)\n",
+            "    Round a number to a given precision in decimal digits.\n",
+            "    \n",
+            "    The return value is an integer if ndigits is omitted or None.  Otherwise\n",
+            "    the return value has the same type as the number.  ndigits may be negative.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = round(promedio, 1) #el digito 1 indica cuantos decimales queremos que deje\n",
+        "print(promedio)"
+      ],
       "metadata": {
-        "id": "eVNPFr0pMRWl"
+        "id": "eVNPFr0pMRWl",
+        "outputId": "a24d0447-b207-434c-d075-6c7c74b68298",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "peso = float(input(\"Digita el peso, en kilogramos: \"))\n",
+        "altura = float(input(\"Digita la altura, en metros: \"))\n",
+        "\n",
+        "imc = round(peso / pow(altura, 2), 2)\n",
+        "\n",
+        "print(f\"El IMC de la persona es: {imc}\")"
+      ],
+      "metadata": {
+        "id": "6ERllaahdLHC",
+        "outputId": "a9456b44-3051-45b3-bb85-a7ed99e1864f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digita el peso, en kilogramos: 70\n",
+            "Digita la altura, en metros: 1.59\n",
+            "El IMC de la persona es: 27.69\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 2.2 Creando funciones"
+        " 2.2 Creando funciones"
       ],
       "metadata": {
         "id": "NCUSezOJIdfy"
@@ -864,30 +946,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Creando mi primera funcion\n",
+        "def promedio():\n",
+        "  calculo=(10+9+7)/3\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "WgWoULpnMSrT"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#llamado a la funcion\n",
+        "promedio()"
+      ],
       "metadata": {
-        "id": "VKfg0zkDMStp"
+        "id": "VKfg0zkDMStp",
+        "outputId": "898474c4-7767-4316-e66b-d8eae8a310b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "04YIHBu-MTNB"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.666666666666666\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -907,30 +1000,65 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#agregando parametros a mi funcion\n",
+        "def promedio(nota1,nota2,nota3):\n",
+        "  calculo=(nota1+nota2+nota3)/3\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "1QHJXCYsMUx3"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(10,9,7)"
+      ],
       "metadata": {
-        "id": "txkkIwheMU0n"
+        "id": "txkkIwheMU0n",
+        "outputId": "5512c8ca-b200-446a-97dd-c01f9eb31cfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.666666666666666\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# agregando parametros en distinto orden, pero puede no ser recomendable ya que eventualmente estas tendran\n",
+        "#un tratamiendo distinto a la hora de calcular una u otra nota segun algun %\n",
+        "promedio(nota1=10,nota2=9,nota3=7)"
+      ],
       "metadata": {
-        "id": "Pq88ApQEMWK9"
+        "id": "Pq88ApQEMWK9",
+        "outputId": "32896e50-cfc6-428b-9910-55599682240d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.666666666666666\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
