Actualizando avance hasta funciones con return

--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -773,10 +773,10 @@
       ],
       "metadata": {
         "id": "GU-HvC-QMOoS",
-        "outputId": "abb4cd7e-5af5-4a1d-e22b-84a8f59d2731",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "abb4cd7e-5af5-4a1d-e22b-84a8f59d2731"
       },
       "execution_count": 18,
       "outputs": [
@@ -797,10 +797,10 @@
       ],
       "metadata": {
         "id": "qKEyjY2bMOqj",
-        "outputId": "e9102add-712b-4db1-abbd-db68d459a73e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e9102add-712b-4db1-abbd-db68d459a73e"
       },
       "execution_count": 19,
       "outputs": [
@@ -831,10 +831,10 @@
       ],
       "metadata": {
         "id": "c7Cn5XFfMP5E",
-        "outputId": "367cfece-f3d6-4a67-bae3-8c52dd8d54c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "367cfece-f3d6-4a67-bae3-8c52dd8d54c8"
       },
       "execution_count": 20,
       "outputs": [
@@ -862,10 +862,10 @@
       ],
       "metadata": {
         "id": "eVNPFr0pMRWl",
-        "outputId": "a24d0447-b207-434c-d075-6c7c74b68298",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a24d0447-b207-434c-d075-6c7c74b68298"
       },
       "execution_count": 21,
       "outputs": [
@@ -889,11 +889,11 @@
         "print(f\"El IMC de la persona es: {imc}\")"
       ],
       "metadata": {
-        "id": "6ERllaahdLHC",
-        "outputId": "a9456b44-3051-45b3-bb85-a7ed99e1864f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6ERllaahdLHC",
+        "outputId": "a9456b44-3051-45b3-bb85-a7ed99e1864f"
       },
       "execution_count": 24,
       "outputs": [
@@ -966,10 +966,10 @@
       ],
       "metadata": {
         "id": "VKfg0zkDMStp",
-        "outputId": "898474c4-7767-4316-e66b-d8eae8a310b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "898474c4-7767-4316-e66b-d8eae8a310b1"
       },
       "execution_count": 27,
       "outputs": [
@@ -1019,10 +1019,10 @@
       ],
       "metadata": {
         "id": "txkkIwheMU0n",
-        "outputId": "5512c8ca-b200-446a-97dd-c01f9eb31cfd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5512c8ca-b200-446a-97dd-c01f9eb31cfd"
       },
       "execution_count": 30,
       "outputs": [
@@ -1044,10 +1044,10 @@
       ],
       "metadata": {
         "id": "Pq88ApQEMWK9",
-        "outputId": "32896e50-cfc6-428b-9910-55599682240d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "32896e50-cfc6-428b-9910-55599682240d"
       },
       "execution_count": 32,
       "outputs": [
@@ -1087,35 +1087,94 @@
       "metadata": {
         "id": "U4MlTO9ucAKc"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio(lista):\n",
+        "  calculo = sum(lista) / len(lista)\n",
+        "  print(calculo)  #con el print solo hace una representacion grafica del calculo no muestra el tipo del dato"
+      ],
       "metadata": {
         "id": "ZrqyDBNFMYOK"
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(notas)"
+      ],
       "metadata": {
-        "id": "wEkixagwMY2E"
+        "id": "wEkixagwMY2E",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f289f231-e64a-41dc-dd13-0d2441181ac6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.375\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#intentamos saber el tipo del dato, para ello creó variable media\n",
+        "media=promedio(notas)"
+      ],
       "metadata": {
-        "id": "60Gvxd9tMa5d"
+        "id": "60Gvxd9tMa5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4f21c6f6-3a66-4e55-fac0-703d8d0de8f1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.375\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(media) #no encuentra tipo dado que la variable solo tiene la representacion grafica y no la definicion del tipo de dato"
+      ],
+      "metadata": {
+        "id": "2ORybKW_iUnG",
+        "outputId": "f9625360-607c-4761-83f2-a4ccc8659aeb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "NoneType"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1129,7 +1188,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#las variables internas de cada funcion solo son validas en la funcion."
+      ],
       "metadata": {
         "id": "yTOqJSgsMbdJ"
       },
@@ -1171,44 +1232,110 @@
       "metadata": {
         "id": "GlWdnX7Ubgl3"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio(lista):\n",
+        "  resultado=sum(lista) / len(lista)\n",
+        "  return resultado"
+      ],
       "metadata": {
         "id": "JdMFsT9GMgI6"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(notas)"
+      ],
       "metadata": {
-        "id": "p7AwNnTCMgLf"
+        "id": "p7AwNnTCMgLf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2649db36-10c5-431b-d62b-1f8d9fc9cdcc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.375"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "resultado=promedio(notas)"
+      ],
       "metadata": {
         "id": "35zC247QMgRP"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(resultado)"
+      ],
       "metadata": {
-        "id": "TjmB8IWpMgV4"
+        "id": "TjmB8IWpMgV4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f7b6449-1e15-4705-b51a-827e71adf181"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resultado"
+      ],
+      "metadata": {
+        "id": "zT1zWcH8nZve",
+        "outputId": "e6c91152-14c6-4a8d-e373-5d32caa6bae2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.375"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "markdown",
