--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -1156,11 +1156,11 @@
         "type(media) #no encuentra tipo dado que la variable solo tiene la representacion grafica y no la definicion del tipo de dato"
       ],
       "metadata": {
-        "id": "2ORybKW_iUnG",
-        "outputId": "f9625360-607c-4761-83f2-a4ccc8659aeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2ORybKW_iUnG",
+        "outputId": "f9625360-607c-4761-83f2-a4ccc8659aeb"
       },
       "execution_count": 42,
       "outputs": [
@@ -1317,11 +1317,11 @@
         "resultado"
       ],
       "metadata": {
-        "id": "zT1zWcH8nZve",
-        "outputId": "e6c91152-14c6-4a8d-e373-5d32caa6bae2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zT1zWcH8nZve",
+        "outputId": "e6c91152-14c6-4a8d-e373-5d32caa6bae2"
       },
       "execution_count": 51,
       "outputs": [
@@ -1363,53 +1363,147 @@
       "metadata": {
         "id": "3saGo2kDf0BY"
       },
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def boletin(lista):\n",
+        "  resultado=sum(lista) / len(lista)\n",
+        "  if resultado >= 7.0:\n",
+        "     situacion = \"Aprobado(a)\"\n",
+        "  else:\n",
+        "     situacion = \"Reprobado(a)\"\n",
+        "  return (resultado, situacion) # retorna la tupla"
+      ],
       "metadata": {
         "id": "unNLrdFjMjbv"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "boletin(notas)"
+      ],
       "metadata": {
-        "id": "Rmvg4hNeMjeD"
+        "id": "Rmvg4hNeMjeD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f63c8d7c-58be-4204-f959-cea40a6aafbc"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8.375, 'Aprobado(a)')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#almacenar en variables separadas, donde envia \"nota\" y situacion en ese orden\n",
+        "resultado, situacion = boletin(notas)"
+      ],
       "metadata": {
         "id": "jCYuFpmeMji6"
       },
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#exibimos un pequeño texto segun solicita el ejercicio\n",
+        "print(f\"El promedio del estudiante es: {resultado} y su situación es: {situacion}\")"
+      ],
       "metadata": {
-        "id": "hSht0Z2cMjlT"
+        "id": "hSht0Z2cMjlT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7bed4a7-5ca7-4a6f-cc75-e79b8c7229cd"
       },
-      "execution_count": null,
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El promedio del estudiante es: 8.375 y su situación es: Aprobado(a)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "notas_2 = [7.5, 4.0, 3.0, 10.0]"
+      ],
+      "metadata": {
+        "id": "4F1ATgty-ENE"
+      },
+      "execution_count": 82,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#   *****************************************************************\n",
+        "#     otra forma de hacer el comentario es dentro de la misma funcion\n",
+        "def boletin(lista):\n",
+        "  resultado=sum(lista) / len(lista)\n",
+        "  if resultado >= 7.0:\n",
+        "     situacion = \"Aprobado(a)\"\n",
+        "  else:\n",
+        "     situacion = \"Reprobado(a)\"\n",
+        "  return f\"El promedio del estudiante es: {resultado} y su situación es: {situacion}\""
+      ],
       "metadata": {
         "id": "tLdjCulMMjnD"
       },
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "boletin(notas_2)"
+      ],
+      "metadata": {
+        "id": "MugqKrwz9UEu",
+        "outputId": "27c1c145-58e4-4e15-d859-c31303d06234",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'El promedio del estudiante es: 6.125 y su situación es: Reprobado(a)'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
     },
     {
       "cell_type": "markdown",
